[gd_scene load_steps=7 format=3 uid="uid://bu4s2qasvkm2r"]

[ext_resource type="Script" path="res://src/GUI/InventorMenu/equipment_menu.gd" id="1_xdr7f"]
[ext_resource type="Texture2D" uid="uid://bf1fsf81ajku6" path="res://assets/images/custom_sprites.png" id="2_5fros"]
[ext_resource type="LabelSettings" uid="uid://dwo5wxa1b5g0g" path="res://assets/resources/message_label_settings.tres" id="3_nk4nx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q7j4i"]
atlas = ExtResource("2_5fros")
region = Rect2(0, 48, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_inu6g"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = SubResource("AtlasTexture_q7j4i")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_pe1fn"]
color = Color(1, 1, 1, 1)

[node name="EquipmentMenu" type="CanvasLayer"]
script = ExtResource("1_xdr7f")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_inu6g")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "< Window Title >"
label_settings = ExtResource("3_nk4nx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_pe1fn")

[node name="InventoryList" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
